# DiscordBot

./: .gitignore  Cargo.toml  README.md
docs/: architecture.md
src/: gemini.rs  handler.rs  main.rs  session.rs  types.rs  utils.rs
workspace/: SOUL.md  tasks.json
workspace/skills/: SKILLS.md
workspace/skills/download_file/: SKILL.md
workspace/skills/download_file/scripts/: download_file.py
workspace/skills/fetch_webpage/: SKILL.md
workspace/skills/fetch_webpage/scripts/: fetch_webpage.py
workspace/skills/get_stock_price/: SKILL.md
workspace/skills/get_stock_price/scripts/: get_stock_price.py
workspace/skills/github/: SKILL.md
workspace/skills/show_bank/: SKILL.md
workspace/skills/show_bank/scripts/: show_bank.py
workspace/skills/trigger_manager/: SKILL.md
workspace/skills/trigger_manager/scripts/: trigger_manager.py
