[package]
name = "DiscordBot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serenity = { version = "0.12", features = ["framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1.49.0", features = ["full"] }
